1.2.14: March ??, 2008
 * Added ability to reorder notebooks on the right side of the page.

1.2.13: March 11, 2008
 * When the "all notes" note is the only note open, it now actually hides when
   the "hide" button is clicked.

1.2.12: March 11, 2008
 * Resizing browser text now causes wiki notes to resize accordingly.

1.2.11: March 11, 2008
 * Added a Debian init script to run the Luminotes server from
   /etc/init.d/luminotes.

1.2.10: March 11, 2008
 * More intelligent scrolling when displaying messages and errors.

1.2.9: March 10, 2008
 * Show list of all notes on startup if there are no startup notes and the
   notebook isn't empty.

1.2.8: March 10, 2008
 * No longer popping up a link info box when clicking on a note link.

1.2.7: March 10, 2008
 * Fixed a bug where, after you highlighted a link and clicked the link button
   to unlink it, the link info box popped up.
 * Actually checking in cache changes that were supposed to be in previous
   release.

1.2.6: March 10, 2008
 * Now creating a new cache connection for each usage of the cache. This will
   prevent crashes that arose when multiple threads tried to share a single
   connection. 

1.2.5: March 7, 2008
 * Fixed a database bug that could have caused a cache save before a commit.
 * Client code now only calls save_note() on the server when necessary, and
   takes startup flag into account.

1.2.4: March 6, 2008
 * New product tour and new screenshots.
 * Added a work-around for a database cache bug that prevented the file upload
   progress bar from showing.
 * Added a work-around for a UI bug that prevented a note from being saved if
   only its startup flag changed.

1.2.3: March 4, 2008
 * Client-side JavaScript code now only calls save_note() on the server when
   necessary.

1.2.2: March 4, 2008
 * Introduced database object caching to improve performance.
 * Wrote a database reaper script to delete unused notes, notebooks, etc.
 * Added some database indices to improve select performance.